style.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

html {
  scroll-behavior: smooth;
}

img {
  display: block;
  max-width: 100%;
}

a {
  text-decoration: none;
  color: inherit;
}

body {
  min-height: 100vh;
  font-family: "Poppins", sans-serif;
  overflow-x: hidden;
}

.wrapper {
  max-width: 1200px;
  padding-inline: 10px;
  margin-inline: auto;
}

.fake {
  min-height: 900px;
}

.nav-fixed {
  position: fixed;
  top: 0;
  right: 0;
  left: 0;
  background-color: rgb(62, 135, 245, 0.7);
  z-index: 5;
}

.header {
  font-family: Poppins;
  height: 100vh;
  background-image: url(./img/header-backround.png);
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
  position: relative;
}

.navigation {
  padding-block: 24px;
  transition: 1s;
}
.navigation .wrapper {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.logo {
  font-size: 48px;
  font-weight: 600px;
  color: #ffffff;
}

.list {
  display: flex;
  justify-content: space-between;
  align-items: center;
  gap: 50px;
  font-size: 24px;
  color: #ffffff;
}
.li_item_5 {
  color: #3e86f5;
  list-style: none;
  /* padding-left: 44px;
  padding-right: 43px;
  padding-top: 14px;
  padding-bottom: 15px; */
  padding: 15px 44px;
  background-color: #ffffff;
  border-radius: 10px;
}
.li_item {
  list-style: none;
}

.burger {
  display: none;
}

@media (max-width: 1024px) {
  .burger {
    display: block;
    background: none;
    border: none;
    color: #ffffff;
    font-size: 30px;
  }
  .burger__close {
    display: none;
  }
  .burger.active .burger__close {
    display: block;
  }
  .burger.active .burger__menu {
    display: none;
  }
  .header__nav {
    display: none;
  }
  .header__nav.active {
    position: fixed;
    inset: 0;
    display: block;
  }
}

.intro {
  text-align: center;
  color: #ffffff;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

.intro .wrapper {
  max-width: 820px;
}

.intro__heading {
  font-size: 64px;
  line-height: 150%;
}
.intro__subheading {
  font-size: 24px;
  line-height: 200%;
}
.world {
  padding-block: 80px;
}

.world .wrapper {
  display: flex;
  font-family: Poppins;
  gap: 120px;
}

.world .wrapper > * {
  flex: 1 1 100%;
}

.world__img {
  position: relative;
}

.world__heading {
  font-size: 48px;
  font-weight: 600;
  padding-top: 182px;
}

.world__paragraph {
  font-size: 20px;
  font-weight: 400;
  padding-bottom: 20px;
  padding-top: 20px;
  line-height: 200%;
}

.btn {
  color: #ffffff;
  list-style: none;
  border-style: none;
  padding: 23px 34px;
  background-color: #3e86f5;
  border-radius: 10px;
  font-family: Poppins;
  font-size: 20px;
  line-height: 30px;
}

.feature {
  color: #3e86f5;
  padding: 27px 46px;
  background-color: #ffffff;
  box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.1);
  border-radius: 35px;
  position: absolute;
  display: grid;
  justify-items: center;
  gap: 0;
  width: 180px;
  height: 120px;
}

.feature__object {
  color: #000000;
  text-transform: uppercase;
  font-size: 18px;
  font-weight: 300;
  line-height: 0%;
}

.feature__num {
  font-weight: 600;
  font-size: 36px;
}

.feature-destination {
  top: 56px;
  left: 400px;
}

.feature-tourists {
  top: 377px;
  right: 400px;
}

.feature-hotels {
  left: 399px;
  top: 537px;
}

.ending {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 120px;
}

.wrapper__ending {
  position: relative;
}

.h1__ending {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

.footer {
  display: flex;
  justify-content: space-between;
  width: 100%;
  padding-inline: 130px;
  padding-bottom: 5rem;
  padding-top: 120px;
}

.footer__header {
  list-style: none;
  display: flex;
  gap: 50px;
}

.h1__ending {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.h1__ending h1 {
  color: #ffffff;
  font-size: 48px;
  font-weight: 600;
}

.ending__btn {
  color: #3e86f5;
  padding-block: 25px;
  padding-inline: 35px;
  border-radius: 25px;
}

.text h3 {
  color: rgba(0, 0, 0, 0.5);
  font-size: 20px;
  font-weight: 500;
}

.footer__list {
  font-size: 24px;
  font-weight: 500;
}

.recomendations__heading {
  font-size: 48px;
  text-align: center;
  padding-bottom: 50px;
}

.recomendations__btn {
  font-size: 18px;
  text-align: center;
}

.popular__btn {
  padding-block: 10px;
  padding-inline: 23px;
  box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.1);
  border-style: none;
  border-radius: 10px;
  background-color: #ffffff;
  color: #3e86f5;
}

.adventure__btn {
  border-style: none;
  background-color: #ffffff;
  color: rgba(0, 0, 0, 0.5);
  padding-left: 24px;
  padding-right: 38px;
  padding-bottom: 88px;
}

.all-pictures {
  display: flex;
  justify-content: center;
  gap: 20px;
  flex-wrap: wrap;
}

.beach__btn {
  border-style: none;
  background-color: #ffffff;
  color: rgba(0, 0, 0, 0.5);
}

.symbol {
  width: 17px;
  height: 17px;
}

.recomendations__subheading2 {
  display: flex;
}

.recomendations-pictures__heading {
  padding-top: 20px;
  padding-bottom: 5px;
}

.picture-1 {
  display: flex;
  flex-direction: column;
  width: 280px;
  height: 293px;
  padding-inline: 10px;
  padding-top: 10px;
  padding-bottom: 83px;
  box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.1);
  background-color: #ffffff;
  border-radius: 25px;
}

.recomendations {
  padding-top: 80px;
}

.offers__section {
  display: flex;
  align-items: center;
  flex-direction: column;
}

.offers__heading {
  font-size: 48px;
  line-height: 72px;
  text-align: center;
  padding-bottom: 70px;
}

.offers__btn {
  border-radius: 10px;
  background-color: #ffffff;
  box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.1);
  padding: 10px;
  margin-bottom: 40px;
}

.offers__couple {
  border-style: none;
  font-size: 18px;
  background-color: #ffffff;
  padding-left: 33px;
  padding-right: 33px;
  color: rgba(0, 0, 0, 0.5);
}

.offers__family {
  border-style: none;
  font-size: 18px;
  background-color: #ffffff;
  color: rgba(0, 0, 0, 0.5);
}

.offers__team {
  border-style: none;
  background-color: #3e86f5;
  font-size: 18px;
  padding-inline: 24px;
  padding-block: 10px;
  border-radius: 10px;
  color: #ffffff;
}

.offers__pictures {
  background-color: #ffffff;
}

.offers-all-pictures {
  display: flex;
  justify-content: center;
  gap: 20px;
}

.offers__subheadings {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.offers-pictures__heading {
  padding-top: 20px;
  padding-bottom: 5px;
}

.offers__picture-1 {
  display: flex;
  flex-direction: column;
  width: 380px;
  min-height: 457px;
  padding-inline: 27px;
  padding-top: 21px;
  padding-bottom: 25px;
  box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.1);
  background-color: #ffffff;
  border-radius: 25px;
  /* padding-right: 33px; */
}

.offers {
  padding-top: 80px;
}

.offers__content {
  display: flex;
  flex-direction: row;
  gap: 20px;
  flex-wrap: wrap;
  justify-content: center;
}

.offers__text {
  transform: rotate(90deg);
  letter-spacing: 0.5em;
  color: rgba(0, 0, 0, 0.5);
  position: relative;
  left: 158px;
  bottom: 84px;
}

.offers__book-now {
  border-style: none;
  background-color: #f2f6ff;
  color: #3e86f5;
  border-radius: 10px;
  padding-inline: 19px;
  padding-block: 13px;
  font-size: 14px;
  position: relative;
}
.offers__subheading-information {
  display: flex;
  justify-content: space-between;
}

.offers__price {
  font-size: 24px;
  font-weight: 500px;
}

.offers__person {
  color: rgba(0, 0, 0, 0.5);
}

.offers-pictures__heading {
  font-size: 24px;
}

.offers__relax {
  font-size: 14px;
  color: #f178b6;
  padding-inline: 16px;
  background-color: #fcddec;
  border-radius: 100px;
}

.offers__days-and-nights {
  padding-left: 12px;
  font-size: 14px;
  color: rgba(0, 0, 0, 0.5);
  line-height: 21px;
}

.offers__relax-2 {
  font-size: 14px;
  color: #7879f1;
  padding-inline: 16px;
  background-color: #f1f1fd;
  border-radius: 100px;
}

